@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-fc4
-fedora-sync-date := 2006-05-21 21:53 UTC
-fedora-sync-tag := fedora-glibc-20060521T2153
+fedora-sync-date := 2006-05-24 07:21 UTC
+fedora-sync-tag := fedora-glibc-20060524T0721
